--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -12,54 +12,91 @@ body {
 }
 
 div#user {
+    margin-bottom: 50px;
     margin-top: 30px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    div {
+        display: flex;
+        div {
+            margin-right: 50px;
+            flex-direction: column;
+        }
+    }
+
     div > h3 {
         font: 25px sans-serif;
         margin-bottom: 10px;
     }
 }
+
+form#send_message {
+    margin-top: 30px;
+}
+
+
 div#user-data{
-    border: 1px solid;
+    display: block !important;
+    background-color: #93bcff;
+    border-radius: 10px;
+    padding: 10px;
+
+    button {
+        margin-top: 10px;
+        margin-left: 3px;
+    }
+
     h5 {
-        font: normal 16px sans-serif;
+        font: normal 15px sans-serif;
+        
+        padding-top: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
     h5:first-child {
-        font: normal 17px sans-serif;
-        margin-bottom: 4px;
+        font: normal 20px sans-serif;
+        padding-bottom: 10px;
+    }
+    h5:last-child {
+        padding-bottom: 5px;
     }
 }
 
 
 div.user_small {
-    margin-bottom: 20px;
-    border: 1px solid;
+    margin-bottom: 10px;
     margin-left: 30px;
-    padding: 10px;
     padding-top: 20px;
-    width: 50%;
     display: flex;
-    flex-direction: column;
-
+    align-items: center;
+    div {
+        min-width: 70px;
+        max-width: 300px;
+    }
+    
     h3 {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         font: 19px sans-serif;
     }
     button {
-        margin-top: 20px;
-        width: 30%;
-        background-color: blue;
-        color: yellow;
+        background-color: white;
+        border: 1px solid;
+        border-radius: 20px;
+        padding: 5px;
+        padding-left: 20px;
+        padding-right: 20px;
+        transition: 0.2s;
+        cursor: pointer;
     }
-    a {
-        margin-top: 10px;
+    button:hover {
+        background-color: #93bcff;
+        border: 1px solid blue;
     }
-    img {
-        width: 70px;
-        height: 80px;
+    div.img {
+        width: 50px;
+        margin-right: 10px;
     }
 }
 
